added recent and anime detail endpoint
