# api/router/anime_router.go
@@ -10,6 +10,8 @@ import (
 func AnimeRouter(rg *gin.RouterGroup) {
 	group := rg.Group("/anime")
 	group.Use(token.JWTAuthMiddleware())
+	group.GET("/recent", controller.RecentAnimeHandler)
+	group.GET("/detail/:id", controller.AnimeDetailHandler)
 	group.GET("/search", controller.SearchTitleHandler)
 	group.POST("/video-url", controller.VideoURLHandler)
 	group.POST("/detail-alt", controller.AnimeDetailAlternativeHandler)
